src/db/create/snapshots/mehari__db__create__test__run_smoke_mitochondrial.snap
---
source: src/db/create/mod.rs
expression: "String::from_utf8(buf)?"
---
txDb:
  transcripts:
  - id: ENST00000361899.2
    geneSymbol: MT-ATP6
    geneId: HGNC:7414
    biotype: TRANSCRIPT_BIOTYPE_CODING
    tags:
    - TRANSCRIPT_TAG_BASIC
    startCodon: 0
    stopCodon: 681
    genomeAlignments:
    - genomeBuild: GENOME_BUILD_GRCH37
      contig: NC_012920.1
      cdsStart: 8526
      cdsEnd: 9207
      strand: STRAND_PLUS
      exons:
      - altStartI: 8526
        altEndI: 9207
        altCdsStartI: 1
        altCdsEndI: 681
        cigar: 681M
  - id: ENST00000361851.1
    geneSymbol: MT-ATP8
    geneId: HGNC:7415
    biotype: TRANSCRIPT_BIOTYPE_CODING
    tags:
    - TRANSCRIPT_TAG_BASIC
    startCodon: 0
    stopCodon: 207
    genomeAlignments:
    - genomeBuild: GENOME_BUILD_GRCH37
      contig: NC_012920.1
      cdsStart: 8365
      cdsEnd: 8572
      strand: STRAND_PLUS
      exons:
      - altStartI: 8365
        altEndI: 8572
        altCdsStartI: 1
        altCdsEndI: 207
        cigar: 207M
  - id: ENST00000361739.1
    geneSymbol: MT-CO2
    geneId: HGNC:7421
    biotype: TRANSCRIPT_BIOTYPE_CODING
    tags:
    - TRANSCRIPT_TAG_BASIC
    startCodon: 0
    stopCodon: 684
    genomeAlignments:
    - genomeBuild: GENOME_BUILD_GRCH37
      contig: NC_012920.1
      cdsStart: 7585
      cdsEnd: 8269
      strand: STRAND_PLUS
      exons:
      - altStartI: 7585
        altEndI: 8269
        altCdsStartI: 1
        altCdsEndI: 684
        cigar: 684M
  - id: ENST00000361335.1
    geneSymbol: MT-ND4L
    geneId: HGNC:7460
    biotype: TRANSCRIPT_BIOTYPE_CODING
    tags:
    - TRANSCRIPT_TAG_BASIC
    startCodon: 0
    stopCodon: 297
    genomeAlignments:
    - genomeBuild: GENOME_BUILD_GRCH37
      contig: NC_012920.1
      cdsStart: 10469
      cdsEnd: 10766
      strand: STRAND_PLUS
      exons:
      - altStartI: 10469
        altEndI: 10766
        altCdsStartI: 1
        altCdsEndI: 297
        cigar: 297M
  - id: ENST00000361567.2
    geneSymbol: MT-ND5
    geneId: HGNC:7461
    biotype: TRANSCRIPT_BIOTYPE_CODING
    tags:
    - TRANSCRIPT_TAG_BASIC
    startCodon: 0
    stopCodon: 1812
    genomeAlignments:
    - genomeBuild: GENOME_BUILD_GRCH37
      contig: NC_012920.1
      cdsStart: 12336
      cdsEnd: 14148
      strand: STRAND_PLUS
      exons:
      - altStartI: 12336
        altEndI: 14148
        altCdsStartI: 1
        altCdsEndI: 1812
        cigar: 1812M
  - id: ENST00000389680.2
    geneSymbol: MT-RNR1
    geneId: HGNC:7470
    biotype: TRANSCRIPT_BIOTYPE_NON_CODING
    tags:
    - TRANSCRIPT_TAG_BASIC
    genomeAlignments:
    - genomeBuild: GENOME_BUILD_GRCH37
      contig: NC_012920.1
      strand: STRAND_PLUS
      exons:
      - altStartI: 647
        altEndI: 1601
        altCdsStartI: 1
        altCdsEndI: 954
        cigar: 954M
  - id: ENST00000387347.2
    geneSymbol: MT-RNR2
    geneId: HGNC:7471
    biotype: TRANSCRIPT_BIOTYPE_NON_CODING
    tags:
    - TRANSCRIPT_TAG_BASIC
    genomeAlignments:
    - genomeBuild: GENOME_BUILD_GRCH37
      contig: NC_012920.1
      strand: STRAND_PLUS
      exons:
      - altStartI: 1670
        altEndI: 3229
        altCdsStartI: 1
        altCdsEndI: 1559
        cigar: 1559M
  geneToTx:
  - geneId: HGNC:7462
    txIds:
    - ENST00000361681.2
  - geneId: HGNC:7421
    txIds:
    - ENST00000361739.1
  - geneId: HGNC:7461
    txIds:
    - ENST00000361567.2
  - geneId: HGNC:7419
    txIds:
    - ENST00000361624.2
  - geneId: HGNC:7414
    txIds:
    - ENST00000361899.2
  - geneId: HGNC:7471
    txIds:
    - ENST00000387347.2
  - geneId: HGNC:7470
    txIds:
    - ENST00000389680.2
  - geneId: HGNC:7460
    txIds:
    - ENST00000361335.1
  - geneId: HGNC:7415
    txIds:
    - ENST00000361851.1
seqDb:
  aliases:
  - ENST00000361335.1
  - ENST00000361567.2
  - ENST00000361739.1
  - ENST00000361851.1
  - ENST00000361899.2
  - ENST00000387347.2
  - ENST00000389680.2
  aliasesIdx:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  seqs:
  - ATGCCCCTCATTTACATAAATATTATACTAGCATTTACCATCTCACTTCTAGGAATACTAGTATATCGCTCACACCTCATATCCTCCCTACTATGCCTAGAAGGAATAATACTATCGCTGTTCATTATAGCTACTCTCATAACCCTCAACACCCACTCCCTCTTAGCCAATATTGTGCCTATTGCCATACTAGTCTTTGCCGCCTGCGAAGCAGCGGTGGGCCTAGCCCTACTAGTCTCAATCTCCAACACATATGGCCTAGACTACGTACATAACCTAAACCTACTCCAATGCTAA
  - ATAACCATGCACACTACTATAACCACCCTAACCCTGACTTCCCTAATTCCCCCCATCCTTACCACCCTCGTTAACCCTAACAAAAAAAACTCATACCCCCATTATGTAAAATCCATTGTCGCATCCACCTTTATTATCAGTCTCTTCCCCACAACAATATTCATGTGCCTAGACCAAGAAGTTATTATCTCGAACTGACACTGAGCCACAACCCAAACAACCCAGCTCTCCCTAAGCTTCAAACTAGACTACTTCTCCATAATATTCATCCCTGTAGCATTGTTCGTTACATGGTCCATCATAGAATTCTCACTGTGATATATAAACTCAGACCCAAACATTAATCAGTTCTTCAAATATCTACTCATCTTCCTAATTACCATACTAATCTTAGTTACCGCTAACAACCTATTCCAACTGTTCATCGGCTGAGAGGGCGTAGGAATTATATCCTTCTTGCTCATCAGTTGATGATACGCCCGAGCAGATGCCAACACAGCAGCCATTCAAGCAATCCTATACAACCGTATCGGCGATATCGGTTTCATCCTCGCCTTAGCATGATTTATCCTACACTCCAACTCATGAGACCCACAACAAATAGCCCTTCTAAACGCTAATCCAAGCCTCACCCCACTACTAGGCCTCCTCCTAGCAGCAGCAGGCAAATCAGCCCAATTAGGTCTCCACCCCTGACTCCCCTCAGCCATAGAAGGCCCCACCCCAGTCTCAGCCCTACTCCACTCAAGCACTATAGTTGTAGCAGGAATCTTCTTACTCATCCGCTTCCACCCCCTAGCAGAAAATAGCCCACTAATCCAAACTCTAACACTATGCTTAGGCGCTATCACCACTCTGTTCGCAGCAGTCTGCGCCCTTACACAAAATGACATCAAAAAAATCGTAGCCTTCTCCACTTCAAGTCAACTAGGACTCATAATAGTTACAATCGGCATCAACCAACCACACCTAGCATTCCTGCACATCTGTACCCACGCCTTCTTCAAAGCCATACTATTTATGTGCTCCGGGTCCATCATCCACAACCTTAACAATGAACAAGATATTCGAAAAATAGGAGGACTACTCAAAACCATACCTCTCACTTCAACCTCCCTCACCATTGGCAGCCTAGCATTAGCAGGAATACCTTTCCTCACAGGTTTCTACTCCAAAGACCACATCATCGAAACCGCAAACATATCATACACAAACGCCTGAGCCCTATCTATTACTCTCATCGCTACCTCCCTGACAAGCGCCTATAGCACTCGAATAATTCTTCTCACCCTAACAGGTCAACCTCGCTTCCCCACCCTTACTAACATTAACGAAAATAACCCCACCCTACTAAACCCCATTAAACGCCTGGCAGCCGGAAGCCTATTCGCAGGATTTCTCATTACTAACAACATTTCCCCCGCATCCCCCTTCCAAACAACAATCCCCCTCTACCTAAAACTCACAGCCCTCGCTGTCACTTTCCTAGGACTTCTAACAGCCCTAGACCTCAACTACCTAACCAACAAACTTAAAATAAAATCCCCACTATGCACATTTTATTTCTCCAACATACTCGGATTCTACCCTAGCATCACACACCGCACAATCCCCTATCTAGGCCTTCTTACGAGCCAAAACCTGCCCCTACTCCTCCTAGACCTAACCTGACTAGAAAAGCTATTACCTAAAACAATTTCACAGCACCAAATCTCCACCTCCATCATCACCTCAACCCAAAAAGGCATAATTAAACTTTACTTCCTCTCTTTCTTCTTCCCACTCATCCTAACCCTACTCCTAATCACATAA
  - ATGGCACATGCAGCGCAAGTAGGTCTACAAGACGCTACTTCCCCTATCATAGAAGAGCTTATCACCTTTCATGATCACGCCCTCATAATCATTTTCCTTATCTGCTTCCTAGTCCTGTATGCCCTTTTCCTAACACTCACAACAAAACTAACTAATACTAACATCTCAGACGCTCAGGAAATAGAAACCGTCTGAACTATCCTGCCCGCCATCATCCTAGTCCTCATCGCCCTCCCATCCCTACGCATCCTTTACATAACAGACGAGGTCAACGATCCCTCCCTTACCATCAAATCAATTGGCCACCAATGGTACTGAACCTACGAGTACACCGACTACGGCGGACTAATCTTCAACTCCTACATACTTCCCCCATTATTCCTAGAACCAGGCGACCTGCGACTCCTTGACGTTGACAATCGAGTAGTACTCCCGATTGAAGCCCCCATTCGTATAATAATTACATCACAAGACGTCTTGCACTCATGAGCTGTCCCCACATTAGGCTTAAAAACAGATGCAATTCCCGGACGTCTAAACCAAACCACTTTCACCGCTACACGACCGGGGGTATACTACGGTCAATGCTCTGAAATCTGTGGAGCAAACCACAGTTTCATGCCCATCGTCCTAGAATTAATTCCCCTAAAAATCTTTGAAATAGGGCCCGTATTTACCCTATAG
  - ATGCCCCAACTAAATACTACCGTATGGCCCACCATAATTACCCCCATACTCCTTACACTATTCCTCATCACCCAACTAAAAATATTAAACACAAACTACCACCTACCTCCCTCACCAAAGCCCATAAAAATAAAAAATTATAACAAACCCTGAGAACCAAAATGAACGAAAATCTGTTCGCTTCATTCATTGCCCCCACAATCCTAG
  - ATGAACGAAAATCTGTTCGCTTCATTCATTGCCCCCACAATCCTAGGCCTACCCGCCGCAGTACTGATCATTCTATTTCCCCCTCTATTGATCCCCACCTCCAAATATCTCATCAACAACCGACTAATCACCACCCAACAATGACTAATCAAACTAACCTCAAAACAAATGATAACCATACACAACACTAAAGGACGAACCTGATCTCTTATACTAGTATCCTTAATCATTTTTATTGCCACAACTAACCTCCTCGGACTCCTGCCTCACTCATTTACACCAACCACCCAACTATCTATAAACCTAGCCATGGCCATCCCCTTATGAGCGGGCACAGTGATTATAGGCTTTCGCTCTAAGATTAAAAATGCCCTAGCCCACTTCTTACCACAAGGCACACCTACACCCCTTATCCCCATACTAGTTATTATCGAAACCATCAGCCTACTCATTCAACCAATAGCCCTGGCCGTACGCCTAACCGCTAACATTACTGCAGGCCACCTACTCATGCACCTAATTGGAAGCGCCACCCTAGCAATATCAACCATTAACCTTCCCTCTACACTTATCATCTTCACAATTCTAATTCTACTGACTATCCTAGAAATCGCTGTCGCCTTAATCCAAGCCTACGTTTTCACACTTCTAGTAAGCCTCTACCTGCACGACAACACATAA
  - GCTAAACCTAGCCCCAAACCCACTCCACCTTACTACCAGACAACCTTAGCCAAACCATTTACCCAAATAAAGTATAGGCGATAGAAATTGAAACCTGGCGCAATAGATATAGTACCGCAAGGGAAAGATGAAAAATTATAACCAAGCATAATATAGCAAGGACTAACCCCTATACCTTCTGCATAATGAATTAACTAGAAATAACTTTGCAAGGAGAGCCAAAGCTAAGACCCCCGAAACCAGACGAGCTACCTAAGAACAGCTAAAAGAGCACACCCGTCTATGTAGCAAAATAGTGGGAAGATTTATAGGTAGAGGCGACAAACCTACCGAGCCTGGTGATAGCTGGTTGTCCAAGATAGAATCTTAGTTCAACTTTAAATTTGCCCACAGAACCCTCTAAATCCCCTTGTAAATTTAACTGTTAGTCCAAAGAGGAACAGCTCTTTGGACACTAGGAAAAAACCTTGTAGAGAGAGTAAAAAATTTAACACCCATAGTAGGCCTAAAAGCAGCCACCAATTAAGAAAGCGTTCAAGCTCAACACCCACTACCTAAAAAATCCCAAACATATAACTGAACTCCTCACACCCAATTGGACCAATCTATCACCCTATAGAAGAACTAATGTTAGTATAAGTAACATGAAAACATTCTCCTCCGCATAAGCCTGCGTCAGATTAAAACACTGAACTGACAATTAACAGCCCAATATCTACAATCAACCAACAAGTCATTATTACCCTCACTGTCAACCCAACACAGGCATGCTCATAAGGAAAGGTTAAAAAAAGTAAAAGGAACTCGGCAAATCTTACCCCGCCTGTTTACCAAAAACATCACCTCTAGCATCACCAGTATTAGAGGCACCGCCTGCCCAGTGACACATGTTTAACGGCCGCGGTACCCTAACCGTGCAAAGGTAGCATAATCACTTGTTCCTTAAATAGGGACCTGTATGAATGGCTCCACGAGGGTTCAGCTGTCTCTTACTTTTAACCAGTGAAATTGACCTGCCCGTGAAGAGGCGGGCATAACACAGCAAGACGAGAAGACCCTATGGAGCTTTAATTTATTAATGCAAACAGTACCTAACAAACCCACAGGTCCTAAACTACCAAACCTGCATTAAAAATTTCGGTTGGGGCGACCTCGGAGCAGAACCCAACCTCCGAGCAGTACATGCTAAGACTTCACCAGTCAAAGCGAACTACTATACTCAATTGATCCAATAACTTGACCAACGGAACAAGTTACCCTAGGGATAACAGCGCAATCCTATTCTAGAGTCCATATCAACAATAGGGTTTACGACCTCGATGTTGGATCAGGACATCCCGATGGTGCAGCCGCTATTAAAGGTTCGTTTGTTCAACGATTAAAGTCCTACGTGATCTGAGTTCAGACCGGAGTAATCCAGGTCGGTTTCTATCTACNTTCAAATTCCTCCCTGTACGAAAGGACAAGAGAAATAAGGCCTACTTCACAAAGCGCCTTCCCCCGTAAATGATATCATCTCAACTTAGTATTATACCCACACCCACCCAAGAACAGGGTTT
  - AATAGGTTTGGTCCTAGCCTTTCTATTAGCTCTTAGTAAGATTACACATGCAAGCATCCCCGTTCCAGTGAGTTCACCCTCTAAATCACCACGATCAAAAGGAACAAGCATCAAGCACGCAGCAATGCAGCTCAAAACGCTTAGCCTAGCCACACCCCCACGGGAAACAGCAGTGATTAACCTTTAGCAATAAACGAAAGTTTAACTAAGCTATACTAACCCCAGGGTTGGTCAATTTCGTGCCAGCCACCGCGGTCACACGATTAACCCAAGTCAATAGAAGCCGGCGTAAAGAGTGTTTTAGATCACCCCCTCCCCAATAAAGCTAAAACTCACCTGAGTTGTAAAAAACTCCAGTTGACACAAAATAGACTACGAAAGTGGCTTTAACATATCTGAACACACAATAGCTAAGACCCAAACTGGGATTAGATACCCCACTATGCTTAGCCCTAAACCTCAACAGTTAAATCAACAAAACTGCTCGCCAGAACACTACGAGCCACAGCTTAAAACTCAAAGGACCTGGCGGTGCTTCATATCCCTCTAGAGGAGCCTGTTCTGTAATCGATAAACCCCGATCAACCTCACCACCTCTTGCTCAGCCTATATACCGCCATCTTCAGCAAACCCTGATGAAGGCTACAAAGTAAGCGCAAGTACCCACGTAAAGACGTTAGGTCAAGGTGTAGCCCATGAGGTGGCAAGAAATGGGCTACATTTTCTACCCCAGAAAACTACGATAGCCCTTATGAAACTTAAGGGTCGAAGGTGGATTTAGCAGTAAACTAAGAGTAGAGTGCTTAGTTGAACAGGGCCCTGAAGCGCGTACACACCGCCCGTCACCCTCCTCAAGTATACTTCAAAGGACATTTAACTAAAACCCCTACGCATTTATATAGAGGAGACAAGTCGTAACATGGTAAGTGTACTGGAAAGTGCACTTGGACGAAC
version: 0.0.0
genomeRelease: GRCh37
